Complete home page header and CSS

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,12 +13,26 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">New books available now!</h1>
+                <h1 class="display-4 logo-font text-white font-weight-bold translucent">
+                    New books available now!
+                </h1>
+                <div class="my-5">
+                    <h4>
+                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Browse our Books <i class="fas fa-book"></i></i></a>
+                    </h4>
+                </div>
             </div>
-            <div class="my-5">
-                <h4>
-                    <a href="" class="browse-button btn btn-lg rounded-0 text-upper py-3">Browse our collection</a>
-                </h4>
+            <div class="col-5 col-md-6 my-auto">
+                <div class="translucent">
+                    <h3 class="display-4 text-white font-weight-bold">Our blog</h3>
+                    <h5 class="display-5 text-white">Blog title</h5>
+                    <p class="text-white">Lorem ipsum dolor sit amet</p>
+                </div>
+                <div class="my-5">
+                    <h4>
+                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Read more <i class="fas fa-book-open"></i></a>
+                    </h4>
+                </div>
             </div>
         </div>
     </div>
