--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,14 +24,13 @@
             </div>
             <div class="col-5 col-md-6 my-auto">
                 <div class="translucent">
-                    <h3 class="display-4 text-white font-weight-bold">Our blog</h3>
-                    <h5 class="display-5 text-white">Blog title</h5>
-                    <p class="text-white">Lorem ipsum dolor sit amet</p>
+                    <h3 class="display-4 text-white font-weight-bold">Sign up to our newsletter</h3>
                 </div>
                 <div class="my-5">
-                    <h4>
-                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Read more <i class="fas fa-book-open"></i></a>
-                    </h4>
+                    <form action="" method="post">
+                        <input type="email" placeholder="Enter your email here">
+                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Sign up! <i class="fas fa-book-open"></i></a>
+                    </form>
                 </div>
             </div>
         </div>
