--- a/static/css/base.css
+++ b/static/css/base.css
@@ -64,6 +64,27 @@ body {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
+.overlay {
+	height: 100%;
+	width: 85%;
+	top: 0;
+	left: 7.5%;
+	position: fixed;
+	background: white;
+	z-index: -1;
+}
+
+.card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card img {
+    max-height: 250px;
+    width: auto;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
