--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -18,8 +18,8 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="books-link">
                 <a href="{% url 'products' %}?category=fiction" class="dropdown-item">Fiction</a>
-                <a href="{% url 'products' %}?category=non-fiction" class="dropdown-item">Non-Fiction</a>
-                <a href="{% url 'products' %}?category=fiction,non-fiction" class="dropdown-item">All Books</a>
+                <a href="{% url 'products' %}?category=non_fiction" class="dropdown-item">Non-Fiction</a>
+                <a href="{% url 'products' %}?category=fiction,non_fiction" class="dropdown-item">All Books</a>
             </div>
         </li>
 
