--- a/static/css/base.css
+++ b/static/css/base.css
@@ -65,6 +65,12 @@ body {
     background: #000 !important;
 }
 
+.btn-outline-black {
+    background: white;
+    color: black !important;
+    border: 1px solid black;
+}
+
 .translucent {
     background-color: rgba(0, 0, 0, 0.7);
 }
