--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -42,6 +42,7 @@
                                     </td>
                                     <td class="py-3">
                                         <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                        <p class="my-0"><strong>Format: </strong>{% if item.product.is_book %}{{ item.format|upper }}{% else %}N/A{% endif %}</p>
                                         <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
                                     </td>
                                     <td class="py-3">
