--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -46,6 +46,16 @@
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
+                            {% with product.is_book as b %}
+                            {% if b %}
+                                <div class="col-12">
+                                    <p><strong>Format:</strong></p>
+                                    <select class="form-control rounded-0 w-50" name="book_format" id='id_book_format'>
+                                        <option value="hardback">Hardback</option>
+                                        <option value="paperback" selected>Paperback</option>
+                                    </select>
+                                </div>
+                            {% endif %}
                             <div class="col-12">
                                 <p class="mt-3"><strong>Quantity:</strong></p>
                                 <div class="form-group w-50">
@@ -65,6 +75,7 @@
                                 <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                            {% endwith %}
                         </div>
                     </form>
                 </div>
