Finish product format logic

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -50,7 +50,7 @@
                             {% if b %}
                                 <div class="col-12">
                                     <p><strong>Format:</strong></p>
-                                    <select class="form-control rounded-0 w-50" name="book_format" id='id_book_format'>
+                                    <select class="form-control rounded-0 w-50" name="product_format" id='id_product_format'>
                                         <option value="hardback">Hardback</option>
                                         <option value="paperback" selected>Paperback</option>
                                     </select>
