Add Review model

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,6 +22,15 @@
                     </h4>
                 </div>
             </div>
+            <div class="col-12 my-auto text-center">
+                <form method="POST" action="" >
+                {% csrf_token %}
+                    <input type="email" placeholder="Enter your email address here">
+                    <label for="privacy">I accept the site's privacy policy.</label>
+                    <input type="checkbox" name="privacy" id="privacy">
+                    <button type="submit">Sign up!</button>
+                </form>
+            </div>
         </div>
     </div>
 {% endblock %}
