--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -100,6 +100,11 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12 offset-md-1">
+            {% include 'products/includes/reviews.html' %}
+        </div>
+    </div>
 </div>
 {% endblock %}
 
