--- a/static/css/base.css
+++ b/static/css/base.css
@@ -119,6 +119,14 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+.review-card {
+    justify-content: left;
+    align-content: start;
+    align-items: start;
+    word-wrap: break-word;
+    word-break: break-word;
+}
+
 /* ------------------------------- bootstrap toasts */
 
 .message-container {
@@ -213,11 +221,6 @@ a.category-badge > span.badge:hover {
 
 /* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
-
-    .overlay {
-        width: 100%;
-        left: 0%;
-    }
 
     .header-container {
         padding-top: 116px;
