--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -11,9 +11,9 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container-fluid">
+<div class="container-fluid" style="width:85%">
     <div class="row">
-        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+        <div class="col-12 col-md-8 col-lg-4 offset-md-2">
             <div class="image-container my-5">
                 {% if product.image %}
                 <a href="{{ product.image.url }}" target="_blank">
@@ -26,7 +26,7 @@
                 {% endif %}
             </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-8 col-lg-4 offset-md-2 offset-lg-0">
             <div class="product-details-container mb-5 mt-md-5">
                 <p class="mb-0">{{ product.name }}</p>
                 <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
@@ -100,11 +100,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-12 offset-md-1">
-            {% include 'products/includes/reviews.html' %}
-        </div>
-    </div>
+    {% include 'products/includes/reviews.html' %}
 </div>
 {% endblock %}
 
