--- a/static/css/base.css
+++ b/static/css/base.css
@@ -134,9 +134,16 @@ a.category-badge > span.badge:hover {
 /* ------------------------------- bootstrap toasts */
 
 .bag-toast {
-    position: absolute;
     top: 75px;
     right: 0px;
+    position: absolute;
+    z-index: 99999999999;
+}
+
+.newsletter-toast {
+    top: 35px;
+    position: absolute;
+    align-content: center;
     z-index: 99999999999;
 }
 
