--- a/templates/base.html
+++ b/templates/base.html
@@ -56,11 +56,7 @@
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
-        <div id="delivery-banner" class="row text-center">
-            <div class="col bg-black text-white">
-                <h4 class="logo-font my-1">Free delivery on orders over £{{ free_delivery_threshold }}!</h4>
-            </div>
-        </div>
+        {% include 'includes/offer-banner.html' %}
     </header>
 
     {% block page_header %}
@@ -74,8 +70,6 @@
         $('.toast').toast('show');
     </script>
     {% endblock %}
-
-
 </body>
 
 </html>
