Fix w3c html issues for landing page

--- a/templates/includes/desktop-top-header.html
+++ b/templates/includes/desktop-top-header.html
@@ -4,7 +4,7 @@
     
     <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
         <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-            {% include './accounts-icon.html' %}
+            {% include './accounts-icon-desktop.html' %}
             {% include './bag-icon.html' %}
         </ul>
     </div>
