--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,11 +1,11 @@
-<div id="topnav" class="d-flex d-lg-none">
+<div class="d-flex d-lg-none topnav">
     {% include './hamburger-menu.html' %}
     {% include './bookable-icon.html' %}
 </div>
-<div id="topnav" class="row bg-white pt-1 pr-1 d-flex d-lg-none">
+<div class="row bg-white pt-1 pr-1 d-flex d-lg-none topnav">
     <ul>
         {% include './search-icon.html' %}
-        {% include './accounts-icon.html' %}
+        {% include './accounts-icon-mobile.html' %}
         {% include './bag-icon.html' %}
     </ul>
 </div>
