--- a/home/templates/home/includes/call-to-action.html
+++ b/home/templates/home/includes/call-to-action.html
@@ -4,7 +4,7 @@
     </h1>
     <div class="my-5">
         <h4>
-            <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-1 text-uppercase py-3">Browse our Books <i class="fas fa-book"></i></i></a>
+            <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-1 text-uppercase py-3">Browse our Books <i class="fas fa-book"></i></a>
         </h4>
     </div>
 </div>
