--- a/templates/400.html
+++ b/templates/400.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-    <div class="container h-100">
+    <div class="container h-100 error-container">
         <div class="row h-100">
             <div class="col-12 my-auto text-center">
                 <h1>400 - bad request</h1>
