--- a/templates/includes/desktop-top-header.html
+++ b/templates/includes/desktop-top-header.html
@@ -1,4 +1,4 @@
-<div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+<div id="topnav" class="row burgundy pt-lg-2 d-none d-lg-flex">
     {% include './bookable-icon.html' %}
     {% include './search-bar.html' %}
     
