--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,8 @@
     <header class="container-fluid fixed-top">
         {% include 'includes/offer-banner.html' %}
         {% include 'includes/desktop-top-header.html' %}
-        <div class="row bg-white">
+        <hr>
+        <div class="row burgundy">
             <nav class="navbar navbar-expand-lg navbar-light w-100">
                 {% include 'includes/mobile-top-header.html' %}
                 {% include 'includes/main-nav.html' %}
