--- a/templates/includes/accounts-icon-desktop.html
+++ b/templates/includes/accounts-icon-desktop.html
@@ -1,5 +1,5 @@
 <li class="list-inline-item dropdown">
-    <a class="text-black nav-link" href="#" id="user-options-desktop" data-toggle="dropdown"
+    <a class="text-white nav-link" href="#" id="user-options-desktop" data-toggle="dropdown"
         aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
             <div><i class="fas fa-user fa-lg"></i></div>
