--- a/templates/includes/bag-icon.html
+++ b/templates/includes/bag-icon.html
@@ -1,5 +1,5 @@
 <li class="list-inline-item">
-    <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link d-block"
+    <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-white{% endif %} nav-link d-block"
         href="{% url 'view_bag' %}">
         <div class="text-center">
             <div><i class="fas fa-shopping-bag fa-lg"></i></div>
