--- a/templates/includes/bookable-icon.html
+++ b/templates/includes/bookable-icon.html
@@ -1,5 +1,5 @@
 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
     <a href="{% url 'home' %}" class="nav-link main-logo-link">
-        <h2 class="text-black my-0 bookable-icon"><strong>b<i class="fas fa-glasses"></i>kable</strong></h2>
+        <h2 class="text-white my-0 bookable-icon"><strong>b<i class="fas fa-glasses"></i>kable</strong></h2>
     </a>
 </div>
