--- a/templates/includes/offer-banner.html
+++ b/templates/includes/offer-banner.html
@@ -1,5 +1,5 @@
 <div id="delivery-banner" class="row text-center">
     <div class="col bg-black text-white">
-        <h4 class="logo-font my-1">Spend over £{{ free_delivery_threshold }} for free delivery on your order!</h4>
+        <h4 class="logo-font my-1">Spend over £{{ free_delivery_threshold }} for free delivery!</h4>
     </div>
 </div>
