Define burgundy in css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -51,6 +51,10 @@ body {
     color: black;
 }
 
+.burgundy {
+    color: #800020;
+}
+
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
