Change bg-colour to brown

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -51,8 +51,8 @@ body {
     color: black;
 }
 
-.burgundy {
-    background-color: #800020;
+.brown {
+    background-color: #662900;
 }
 
 .shop-now-button:hover,
