Change colour scheme

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -51,6 +51,10 @@ body {
     color: black;
 }
 
+.forestgreen {
+    background-color: forestgreen;
+}
+
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
