--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
         {% include 'includes/offer-banner.html' %}
         {% include 'includes/desktop-top-header.html' %}
         <hr>
-        <div class="row burgundy">
+        <div class="row forestgreen">
             <nav class="navbar navbar-expand-lg navbar-light w-100">
                 {% include 'includes/mobile-top-header.html' %}
                 {% include 'includes/main-nav.html' %}
