--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -56,13 +56,13 @@
                         {% endfor %}
                         <div class="btt-button shadow-sm rounded-0 border border-black">
                             <a class="btt-link d-flex h-100">
-                                <i class="fas fa-arrow-up text-white mx-auto my-auto"></i>
+                                <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
                             </a>	
                         </div>
                     </div>
                     <div class="table-responsive rounded d-none d-md-block">
                         <table class="table table-sm table-borderless">
-                            <thead class="text-white">
+                            <thead class="text-black">
                                 <tr>
                                     <th scope="col">Product Info</th>
                                     <th scope="col"></th>
