--- a/templates/includes/search-icon.html
+++ b/templates/includes/search-icon.html
@@ -3,7 +3,7 @@
         aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
             <div><i class="fas fa-search fa-lg"></i></div>
-            <p class="my-0"></p>
+            <p class="my-0">Search</p>
         </div>
     </a>
     <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
