--- a/static/css/base.css
+++ b/static/css/base.css
@@ -219,7 +219,7 @@ input[name='q']::placeholder {
     }
 
     .display-4.logo-font.text-white {
-        font-size: 0.5rem;
+        font-size: 2rem;
     }
 
     .nav-link {
@@ -252,6 +252,10 @@ input[name='q']::placeholder {
 
     .increment-qty, .decrement-qty {
         padding: .25rem .5rem !important;
+    }
+
+    .bookable-icon {
+        font-size: 1rem;
     }
 }
 
