Make mobile nav icons smaller

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -255,6 +255,10 @@ input[name='q']::placeholder {
     }
 
     .bookable-icon {
+        font-size: 1.3rem;
+    }
+
+    .mobile-icons {
         font-size: 1rem;
     }
 }
