--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -2,7 +2,7 @@
     {% include './hamburger-menu.html' %}
     {% include './bookable-icon.html' %}
 </div>
-<div class="row forestgreen pt-1 pr-1 d-flex d-lg-none topnav">
+<div class="row forestgreen pt-1 pr-1 d-flex d-lg-none topnav mobile-icons">
     <ul>
         {% include './search-icon.html' %}
         {% include './accounts-icon-mobile.html' %}
