Fix profile and allauth offsets

--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -4,7 +4,7 @@
     <div class="container header-container">
         <div class="overlay"></div>
         <div class="row">
-            <div class="col-6 offset-3 offset-lg-0">
+            <div class="col-8 col-lg-12 offset-2 offset-lg-0">
                 <div class="allauth-form-inner-content">
                     {% block inner_content %}
                     {% endblock %}
