--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -8,7 +8,7 @@
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
-            <div class="col"></div>
+            <div class="col-6 col-lg-12 offset-3 offset-lg-0"></div>
         </div>
     </div>
 {% endblock %}
@@ -17,7 +17,7 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-6 col-lg-12 offset-3 offset-lg-0">
                 <hr>
                 <h2 class="logo-font mb-4">My Profile</h2>
                 <hr>
