Fix more offsets

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="row">
-            <div class="col">
+            <div class="col-10 offset-1 col-lg-12 offset-lg-0">
                 {% if bag_items %}
                     <div class="d-block d-md-none">
                         <div class="row">
