--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -14,7 +14,7 @@
     <div class="overlay"></div>
     <div class="container mb-2">
         <div class="row">
-            <div class="col">
+            <div class="col-10 offset-1 col-lg-12 offset-lg-0">
                 <hr>
                 <h2 class="logo-font mb-4">Shopping Bag</h2>
                 <hr>
