--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-8 col-lg-6 offset-2 offset-lg-0">
+            <div class="col-6 offset-3 offset-lg-0">
                 <p class="text-muted">Default Delivery Information</p>
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
@@ -65,7 +65,7 @@
                                             {% endfor %}
                                         </ul>
                                     </td>
-                                    <td>${{ order.grand_total }}</td>
+                                    <td>£{{ order.grand_total }}</td>
                                 </tr>
                             {% endfor %}
                         </tbody>
