Updated text on home and product detail checkboxes

--- a/home/templates/home/includes/subscription.html
+++ b/home/templates/home/includes/subscription.html
@@ -21,7 +21,7 @@
             </div>
             <div class="col-12">
                 <input type="checkbox" name="privacy" id="privacy">
-                <label for="privacy" class="text-white font-weight-bold ">I accept the site's privacy policy.</label>
+                <label for="privacy" class="text-white font-weight-bold ">Sign me up for marketing emails!</label>
             </div>
             <div class="col-12">
                 <button class="shop-now-button btn btn-lg rounded-1 text-uppercase py-3" type="submit">Sign up <i
