--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -17,7 +17,7 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-sm-8 offset-sm-1 col-md-12 offset-md-0">
                 <hr>
                 <h2 class="logo-font mb-4">Thank You</h2>
                 <hr>
@@ -26,7 +26,7 @@
         </div>
 
         <div class="row">
-            <div class="col-8 offset-2 col-lg-7 offset-lg-0">
+            <div class="col-10 offset-1 col-md-8 offset-md-2 col-lg-7 offset-lg-0">
                 <div class="order-confirmation-wrapper p-2 border">
                     <div class="row">
                         <div class="col">
