--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="row">
-            <div class="col-10 offset-1 col-md-8 offset-md-2 col-lg-7 offset-lg-0">
+            <div class="col-12 col-md-8 offset-md-2 col-lg-7 offset-lg-0">
                 <div class="order-confirmation-wrapper p-2 border">
                     <div class="row">
                         <div class="col">
