--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -17,7 +17,7 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col-sm-8 offset-sm-1 col-md-12 offset-md-0">
+            <div class="col-12 col-sm-10 offset-sm-1 offset-lg-0">
                 <hr>
                 <h2 class="logo-font mb-4">Thank You</h2>
                 <hr>
