Increase offset on checkout-success headings

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -19,9 +19,9 @@
         <div class="row">
             <div class="col-12">
                 <hr>
-                <h2 class="logo-font mb-4 offset-2">Thank You</h2>
+                <h2 class="logo-font mb-4 offset-sm-2 offset-lg-0">Thank You</h2>
                 <hr>
-                <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
+                <p class="text-black offset-sm-2 offset-lg-0">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
             </div>
         </div>
 
