--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -17,16 +17,16 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col-8 offset-2 col-lg-12 offset-lg-0">
                 <hr>
-                <h2 class="logo-font mb-4 offset-sm-2 offset-lg-0">Thank You</h2>
+                <h2 class="logo-font mb-4">Thank You</h2>
                 <hr>
-                <p class="text-black offset-sm-2 offset-lg-0">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
+                <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-12 col-md-8 offset-md-2 col-lg-7 offset-lg-0">
+            <div class="col-8 offset-2 col-lg-7 offset-lg-0">
                 <div class="order-confirmation-wrapper p-2 border">
                     <div class="row">
                         <div class="col">
