Move favicon to static folder so it is displayed

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,7 @@
     {% endblock %}
 
     <title>Bookable {% block extra_title %}{% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
 </head>
 
 <body>
